--- a/style.css
+++ b/style.css
@@ -335,11 +335,11 @@ p {
     width: 100%;
     height: 100%;
     background: var(--black);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 20px;
+    text-align: center;
     transform: translateY(100%);
     transition: 0.5s ease-in-out;
+    cursor: pointer;
 }
 .dark .project .content .workBx .textBx {
     background: #444;
@@ -350,6 +350,14 @@ p {
 .project .content .workBx .textBx h3 {
     color: #fff;
     font-size: 1em;
+}
+.visite {
+    background: #2196f3;
+    color: #fff;
+    padding: 5px;
+    margin-top: 20px;
+    text-decoration: none;
+    font-weight: 600;
 }
 .testimonials .content {
     display: grid;
